--- a/app/src/main/res/layout/city_chooser.xml
+++ b/app/src/main/res/layout/city_chooser.xml
@@ -24,7 +24,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:entries="@array/cities">
+        android:entries="@array/cities"
+        >
     </Spinner>
 
     <CheckBox
