--- a/app/src/main/res/layout/city_chooser.xml
+++ b/app/src/main/res/layout/city_chooser.xml
@@ -14,7 +14,8 @@
         android:layout_marginEnd="15dp"
         android:text="@string/choose_city"
         android:textSize="20sp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        />
 
     <Spinner
         android:id="@+id/citySpinner"
