Android. Базовый уровень. Практчиеское задание №3

--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -107,4 +107,12 @@
             android:textSize="15sp"/>
     </RadioGroup>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/settings_accept"
+        android:onClick="settings_accept"/>
+
 </android.support.constraint.ConstraintLayout>
