--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,94 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/windSpeed"
+            android:layout_marginStart="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="Скорость ветра:"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
+
+        <TextView
+            android:id="@+id/windSpeed_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="8"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
+
+        <TextView
+            android:id="@+id/windSpeed_units"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="м/с"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
+
+        <TextView
+            android:id="@+id/pressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="Давление:"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
+
+        <TextView
+            android:id="@+id/pressure_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="755"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
+
+        <TextView
+            android:layout_marginEnd="15dp"
+            android:id="@+id/pressure_units"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="мм рт.ст.	"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="50dp">
 
@@ -391,6 +479,29 @@
                 android:shadowDx="2"
                 android:shadowDy="2"/>
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/city_choose_btn"
+            android:textSize="10sp"
+            android:onClick="city_choose"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/settings_btn"
+            android:textSize="10sp"
+            android:onClick="settings"/>
 
     </LinearLayout>
 
