--- a/app/src/main/res/layout/city_chooser.xml
+++ b/app/src/main/res/layout/city_chooser.xml
@@ -55,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/accept"/>
+        android:text="@string/accept"
+        android:onClick="city_choose_accept"/>
 
 </android.support.constraint.ConstraintLayout>
