--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -57,7 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/C"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/F"
@@ -96,7 +97,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/wind_speed_count_1"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/kmh"
