Android. Базовый уровень. Практчиеское задание №6

--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
@@ -196,296 +196,29 @@
                 android:shadowDx="2"
                 android:shadowDy="2"/>
 
-
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="50dp">
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="Прогноз на ближайшие дни:"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:shadowColor="@android:color/black"
+            android:shadowRadius="2"
+            android:shadowDx="2"
+            android:shadowDy="2"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tomorrow"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
+        </android.support.v7.widget.RecyclerView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/future_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tomorrow_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:src="@drawable/cloud"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tomorrow_weath_type"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/third_day"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/future_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/third_day_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:src="@drawable/sun"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/third_day_weath_type"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fourth_day"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/future_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fourth_day_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:src="@drawable/sun"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fourth_day_weath_type"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fifth_day"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/future_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fifth_day_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:src="@drawable/cloud"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fifth_day_weath_type"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sixth_day"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/future_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sixth_day_day_night"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:src="@drawable/cloud"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sixth_day_weath_type"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:shadowColor="@android:color/black"
-                    android:shadowRadius="2"
-                    android:shadowDx="2"
-                    android:shadowDy="2"/>
-            </LinearLayout>
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
